CHANGELOG METADATA STANDARDS
================================
	* change notes to comments
	* Survey
		- Changed id to long_name
		- Changed name to short_name
		- Changed location to geographic_location
		
	* Station
		- nested lat, lon, elevation, declination under location
		- nested start, end under time_period
		
	* Run
	
	* Channel
	
	* Electric
	
	* Magnetic
	