@@ -1,25 +1,31 @@
 <?xml version="1.0" ?>
 <channel>
-    <type>None</type>
-    <units>None</units>
-    <channel_number type="integer">None</channel_number>
-    <component>None</component>
-    <sample_rate type="float" units="samples per second">None</sample_rate>
     <azimuth type="float" units="degrees">0.0</azimuth>
-    <notes>None</notes>
+    <channel_number type="integer">None</channel_number>
+    <comments>None</comments>
+    <component>None</component>
     <data_quality>
         <rating type="integer">None</rating>
-        <warning_notes>None</warning_notes>
+        <warning_comments>None</warning_comments>
         <warning_flags>None</warning_flags>
         <author>None</author>
     </data_quality>
     <filter>
         <name>None</name>
         <applied type="boolean">None</applied>
-        <notes>None</notes>
+        <comments>None</comments>
     </filter>
-    <datum>WGS84</datum>
-    <latitude type="float">None</latitude>
-    <longitude type="float">None</longitude>
-    <elevation type="float">None</elevation>
+    <location>
+        <datum>WGS84</datum>
+        <latitude type="float">None</latitude>
+        <longitude type="float">None</longitude>
+        <elevation type="float">None</elevation>
+    </location>
+    <sample_rate type="float" units="samples per second">None</sample_rate>
+    <time_period>
+        <start>1980-01-01T00:00:00+00:00</start>
+        <end>1980-01-01T00:00:00+00:00</end>
+    </time_period>
+    <type>None</type>
+    <units>None</units>
 </channel>
