@@ -7,8 +7,8 @@ comments,str,False,name,
 num_channels,int,TRUE,name,
 channels_recorded,str,TRUE,name,
 data_type,str,TRUE,name,
-station_orientation,str,True,name,
-orientation_method,str,False,name,
+orientation.option,str,True,name,
+orientation.method,str,False,name,
 provenance.creation_time,str,TRUE,name,
 provenance.comments,str,TRUE,name,
 provenance.log,str,TRUE,name,
