@@ -219,8 +219,8 @@ class TestStationMetadata(unittest.TestCase):
                            'num_channels': 5,
                            'channels_recorded': '[ex, ey, hx, hy, hz]',
                            'data_type': 'MT',
-                           'station_orientation': 'geographic north',
-                           'orientation_method': 'compass',
+                           'orientation.option': 'geographic north',
+                           'orientation.method': 'compass',
                            'acquired_by.author': 'acquired test',
                            'acquired_by.email': 'acquired email',
                            'provenance.creation_time': '2010-04-01T10:10:10+00:00',
@@ -364,13 +364,13 @@ class TestChannel(unittest.TestCase):
                            'data_quality.rating': 5,
                            'data_quality.warning_flags': '0',
                            'data_quality.warning_comments': None,
-                           'datum': 'WGS84',
-                           'elevation': 1200.3,
+                           'location.datum': 'WGS84',
+                           'location.elevation': 1200.3,
                            'filter.applied': [False],
                            'filter.name': ['counts2mv'],
                            'filter.comments': None,
-                           'latitude': 40.12,
-                           'longitude': -115.767,
+                           'location.latitude': 40.12,
+                           'location.longitude': -115.767,
                            'comments': None,
                            'sample_rate': 256.0,
                            'type': 'auxiliary',
@@ -474,8 +474,8 @@ class TestMagnetic(unittest.TestCase):
                            'data_quality.rating': 2,
                            'data_quality.warning_flags': '0',
                            'data_quality.warning_comments': None,
-                           'datum': 'WGS84',
-                           'elevation': 1230.9,
+                           'location.datum': 'WGS84',
+                           'location.elevation': 1230.9,
                            'filter.applied': [True],
                            'filter.name': ['counts2mv'],
                            'filter.comments': None,
@@ -483,8 +483,8 @@ class TestMagnetic(unittest.TestCase):
                            'h_field_max.start': 1200.1,
                            'h_field_min.end': 12.3,
                            'h_field_min.start': 1400.0,
-                           'latitude': 40.234,
-                           'longitude': -113.45,
+                           'location.latitude': 40.234,
+                           'location.longitude': -113.45,
                            'comments': None,
                            'sample_rate': 256.0,
                            'sensor.id': 'ant2284',
